# wifi-portal

./: CMakeLists.txt  README.md  README_ZH.md  commandline.c  commandline.h  conf.c  conf.h  debug.c  debug.h  http.c  http.h  main.c  utils.c  utils.h
kmod/: Makefile  main.c  tip.c  tip.h  tmac.c  tmac.h
openwrt/: Makefile
openwrt/files/: wifi-portal.init
